--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  height: 100vh;
+  width: 100vw;
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  /* min-height: 100vh; */
+  /* display: flex; */
+  /* flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
