--- a/src/Optimized-path-finder/Board/Board.css
+++ b/src/Optimized-path-finder/Board/Board.css
@@ -1,16 +1,41 @@
 .board {
-    outline: 2px solid rgb(134, 154, 189);
-  }
-  
-  .row {
-    height: 50px;
-  }
-  
-  .cell {
-    width: 50px;
-    height: 50px;
-    outline: 1px solid rgb(134, 154, 189);
-    display: inline-block;
-  }
-  
-  
+  outline: 2px solid rgb(134, 154, 189);
+  height: 100vh;
+  width: 100vw;
+}
+
+.row {
+  height: 50px;
+  width: 100%;
+}
+
+.cell {
+  width: 50px;
+  height: 50px;
+  outline: 1px solid rgb(134, 154, 189);
+  display: inline-block;
+  position: relative;
+}
+.dot {
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  bottom: -5px;
+  right: -5px;
+  z-index: 10;
+  background-color: #6e97cc;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dot:hover {
+  height: 20px;
+  width: 20px;
+  bottom: -10px;
+  right: -10px;
+  cursor: pointer;
+}
+.konvajs-content {
+  position: absolute !important;
+  top: 0;
+  right: 0;
+}
