--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .App {
-  text-align: center;
   height: 100vh;
+  position: relative;
+
   width: 100vw;
   background-color: #282c34;
   overflow-y: hidden;
   overflow-x: hidden;
   min-height: 100vh;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
