--- a/src/Optimized-path-finder/Board/Board.css
+++ b/src/Optimized-path-finder/Board/Board.css
@@ -1,10 +1,17 @@
 .board {
   outline: 2px solid rgb(134, 154, 189);
   /* position: relative; */
+  /* left: -15%; */
+  display: inline-block;
+  margin-right: 50px;
   /* height: 100vh;*/
   /* width: 100vw; */
 }
-
+.ctn-board {
+  /* position: absolute; */
+  padding-top: 2%;
+  padding-left: 15%;
+}
 .row {
   height: 50px;
   /* width: 100%; */
