--- a/src/Optimized-path-finder/menu/styles.css
+++ b/src/Optimized-path-finder/menu/styles.css
@@ -1,31 +1,66 @@
 #play_panel {
-  top: 250px;
-  right: 10px;
+  /* top: 200px; */
+  /* right: -500px; */
   position: absolute;
+  display: inline-block;
+  text-align: center;
+
   padding: 20px;
   background-color: #282c34;
   color: #282c34;
   border-radius: 6px;
   box-shadow: 1px 1px 5px rgb(0 0 0 / 25%);
   cursor: default;
-  width: 300px;
+  width: 400px;
   z-index: 1100000;
   /* height: 40px; */
 }
 
-p{
-  color:#6e97cc;
-  font-size:12px;
+p {
+  color: #6e97cc;
 }
 .menu-button {
   background: #282c34;
-  font-family: 'Trebuchet MS', sans-serif;
+  font-family: "Trebuchet MS", sans-serif;
   border-radius: 15px;
-  color:#6e97cc;
-  font-size:12px;
+  color: #6e97cc;
+  font-size: 20px;
   cursor: pointer;
 
   padding: 8px 20px;
   margin: 0 1%;
   width: 28%;
+}
+
+.menu-large-button {
+  background: #282c34;
+  font-family: "Trebuchet MS", sans-serif;
+  border-radius: 15px;
+  color: #6e97cc;
+  font-size: 20px;
+  cursor: pointer;
+
+  padding: 8px 20px;
+  margin-top: 10px;
+  width: 40%;
+}
+
+.map {
+  padding: 10px;
+}
+
+.line {
+  height: 5px;
+  margin-top: 10px;
+  width: 40px;
+  margin-right: 10px;
+  min-width: 40px;
+  display: inline-block;
+}
+
+.instruction {
+  color: #6e97cc;
+  display: inline-block;
+  width: 280px;
+  font-size: 16px;
 }
